namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    env: production
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    env: monitoring
